--- a/checkout-sdk/src/main/res/values/strings.xml
+++ b/checkout-sdk/src/main/res/values/strings.xml
@@ -107,4 +107,45 @@
     <!--    <string name="checkout_mtn_code">*170#, </string>-->
     <!--    <string name="checkout_select_approvals">go to My Account and select Approvals.</string>-->
 
+    <string name="checkout_heading">Checkout</string>
+    <string name="checkout_hubtel">Hubtel</string>
+    <string name="checkout_zeepay">Zeepay</string>
+    <string name="checkout_g_money">G-Money</string>
+
+    <string name="checkout_others">Others</string>
+    <string name="checkout_bank_pay">BankPay</string>
+    <string name="checkout_pay_in_four">Pay-In-4</string>
+
+    <string name="checkout_business_name">BusinessName</string>
+    <string name="checkout_business_contact">BusinessContact</string>
+
+    <string name="checkout_view_fees">View Fees &amp; Taxes</string>
+    <string name="checkout_less_details">Less details</string>
+
+    <string name="checkout_hubtel_balance_debit_msg">Your balance on Hubtel will be debited immediately you confirm payment.\n\nNo authorisation prompt will be sent to you.</string>
+    <string name="checkout_gmoney_balance_debit_msg">You will be required to enter your Mandate ID to confirm your transaction.</string>
+    <string name="checkout_zeepay_authorize">Steps to authorize the payment process</string>
+    <string name="checkout_zeepay_steps">\n1. Dial *270#\n2. Select Option 8 (Account)\n3. Select Option 4 (Approve Payment)\n4. Enter PIN to make payment</string>
+
+    <string name="checkout_gmoney_mandate_id_msg">Steps to generate a mandate ID on G-Money\n\n</string>
+    <string name="checkout_gmoney_mandate_id_steps">
+        1 Dial *422#\n\n
+        2 Select Option 2 (G-Money)\n\n
+        3 Select Option 4 (Payment Services)\n\n
+        4 Select Option 6 (Mandate)\n\n
+        5 Select Option 1 (Create Mandate)\n\n
+    </string>
+    <string name="checkout_enter_new_mandate_id">Enter new Mandate ID</string>
+    <string name="checkout_confirm_order">Confirm Order</string>
+    <string name="checkout_orders_and_delivery">Orders and Delivery</string>
+    <string name="checkout_success_message">"Your payment was successful. Thank you for choosing us"</string>
+    <string name="checkout_paid_message">has been paid</string>
+    <!--    <string name="checkout_failed">Failed</string>-->
+    <string name="checkout_failed">Transaction Failed</string>
+    <string name="checkout_download_pdf">DOWNLOAD PDF</string>
+    <string name="checkout_download_complete">Download Complete</string>
+    <string name="checkout_bank_pay_via">Pay at your bank branch via </string>
+    <string name="checkout_bank_pay_complete_stage">Once complete you may check the status of this pay-in-slip in your payment history or dial  </string>
+    <string name="checkout_payment_platfrom"> payment platform.</string>
+
 </resources>
